@@ -1,6 +1,5 @@
 package factory;
 
-import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -9,14 +8,14 @@ import entity.Driver;
 public class FactoryDriver {
     private Map<Integer, Driver> factory;
 
-    private static final FactoryDriver factoryDriver = new FactoryDriver();
+    private static final FactoryDriver FACTORYDRIVER = new FactoryDriver();
 
     private FactoryDriver() {
-        this.factory = new HashMap<Integer, Driver>();
+        this.factory = new HashMap<>();
     }
 
     public void almacenate(Driver driver) {
-        Integer idDriver = new Integer(driver.getId());
+        Integer idDriver = Integer.valueOf((driver.getId()));
         if (this.factory.get(idDriver) == null) {
             this.factory.put(idDriver, driver);
         } else {
@@ -25,29 +24,23 @@ public class FactoryDriver {
     }
 
     public boolean search(Driver driver) {
-        Integer idDriver = new Integer(driver.getId());
+        Integer idDriver = Integer.valueOf((driver.getId()));
         boolean located = false;
         if (this.factory.get(idDriver) != null) {
             located = true;
         }
         return located;
     }
-    
+
     public void clear() {
         this.factory.clear();
     }
-    
-    @SuppressWarnings("unused")
+
     public int size() {
-        Collection<Driver> values = this.factory.values();
-        int cont=0;
-        for (Driver driver: values) {
-            cont++;
-        }
-        return cont;
+        return factory.size();
     }
 
     public static FactoryDriver getFactoryDriver() {
-        return factoryDriver;
+        return FACTORYDRIVER;
     }
 }
